# outpost-mdm-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/outpost-core/: Cargo.toml
crates/outpost-core/src/: lib.rs
crates/outpost-migrations/: Cargo.toml  build.rs
crates/outpost-migrations/migrations/: 0001_customers.sql  0002_users_auth.sql  0003_devices.sql  0004_applications.sql  0005_configurations.sql  0006_uploaded_files.sql  0007_push.sql  0008_settings.sql  0009_seed_admin.sql  0010_sessions.sql  0011_devices_configuration.sql  0012_telemetry.sql  0013_customers_active.sql  0014_application_source_url.sql  0015_application_rollouts.sql  0016_device_state_snapshot.sql  0017_device_keys.sql  0018_encrypted_distributions.sql  0019_default_configuration.sql  0020_server_timezone.sql  0021_default_config_settings.sql  0022_server_datetime_format.sql  0023_user_profile_fields.sql  0024_ballistics_schema.sql  0025_ballistics_permissions.sql  0026_bundle_assignments.sql  0027_bundle_permissions_seed.sql  0028_ballistics_entities_tenant_pk.sql  0029_totp_last_step.sql  0030_push_messages_customer_index.sql
crates/outpost-migrations/src/: lib.rs
crates/outpost-migrations/tests/: migrate.rs
crates/outpost-server/: Cargo.toml
crates/outpost-server/src/: apk_watcher.rs  app.rs  auth.rs  auth_extract.rs  bootstrap.rs  client_ip.rs  cloudru_signer.rs  config.rs  db.rs  distribute_gc.rs  distribution.rs  error.rs  i18n.rs  lib.rs  main.rs  page.rs  permission.rs  rate_limit.rs  rollout_monitor.rs  scheduler.rs  session.rs  shutdown.rs  signed_url.rs  state.rs  storage.rs  totp.rs
crates/outpost-server/src/routes/: applications.rs  auth.rs  ballistics.rs  bundles.rs  configurations.rs  devices.rs  distribute.rs  enrollment.rs  files.rs  groups.rs  internal.rs  mod.rs  otel.rs  prom.rs  push.rs  settings.rs  stats.rs  users.rs  web.rs
crates/outpost-server/templates/: _nav.html  application_edit.html  application_rollouts.html  application_versions.html  applications.html  ballistics_templates.html  base.html  configuration_edit.html  configurations.html  customer_edit.html  customers.html  dashboard.html  device_edit.html  device_enroll.html  device_logs.html  device_push.html  device_telemetry.html  devices.html  file_distribute.html  files.html  group_edit.html  groups.html  login.html  login_2fa.html  me_2fa.html  me_password.html  profile.html  push.html  roles.html  settings.html  signup.html  telemetry.html  user_edit.html  users.html
crates/outpost-server/tests/: applications.rs  auth.rs  configurations.rs  devices.rs  enrollment.rs  files.rs  groups.rs  healthz.rs  otel.rs  push.rs  security.rs  settings.rs  users.rs  web.rs
crates/outpost-server/tests/common/: mod.rs
deploy/: deploy.ps1  nginx-mdm.secondf8n.tech.conf  outpost-server.service
deploy/grafana-alerting/: rules.yml
deploy/grafana-dashboards/: outpost-device.json  outpost-fleet.json
deploy/systemd-drop-ins/: README.md
deploy/systemd-drop-ins/prometheus-node-exporter.service.d/: tailscale-bind.conf
deploy/systemd-drop-ins/prometheus.service.d/: tailscale-bind.conf
docs/: ARCHITECTURE.md  BALLISTICS-CRYPTO-DESIGN.md  BALLISTICS-IMPLEMENTATION-SPEC.md  CLIENT-TELEMETRY-CONTRACT.md  DEPLOY.md  LIBRARY-ARCHIVES.md  OFFLINE-RESILIENCE.md  OTEL-CONTRACT.md  PRODUCTION-ROLLOUT-PLAN.md  PROVISION-NEW-DEVICE.md  V25-SOLDIER-ROLLOUT.md
docs/v25-reference/: V25_ANDROID_INTEGRATION_GUIDE.md  V25_AUDIT_REPORT.md  V25_FINAL_REPORT.md  V25_HANDOFF.md  V25_PACKAGE_README.md
docs/v25-reference/assets-for-android/: drug_table.json  triggers_v25.json
docs/v25-reference/python-source/: chat_v25.py  chat_v25_prod.py  drug_validator_v2.py  export_triggers_for_android.py  post_output_guard.py  rag_v5.py  response_cleaner.py  router_v2.py  router_v3.py  smoke_test_v25_sft.py
notes/: wiki-pages.md
tools/: upload_library_archives.py  upload_manifest.py
