[workspace]
resolver = "3"
members = [
    "crates/outpost-server",
    "crates/outpost-core",
    "crates/outpost-migrations",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Frontier Capital"]
repository = "https://github.com/daphate/outpost-mdm-rs"
homepage = "https://github.com/daphate/outpost-mdm-rs"
description = "Outpost MDM — field-grade device management server (Rust)"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time", "fs", "sync"] }
# ReaderStream — стриминг файловых тел ответов без буферизации целого файла в RAM
tokio-util = { version = "0.7", features = ["io"] }
# HTTP framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "compression-gzip", "timeout", "set-header"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# error handling
anyhow = "1"
thiserror = "2"
# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
# persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "macros"] }
# templating (HTMX admin UI)
askama = "0.13"
# auth
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
# crypto helpers (HMAC for signed URLs)
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
# v0.14 — per-device encrypted distribution (MDM-DEVICE-CONTROL-CONTRACT §2):
# P-256 ECDH (рекомендуемая Android Keystore curve), HKDF-SHA-256 derivation
# of KEK, AES-256-GCM AEAD для wrap DEK + encrypt blob.
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "pem"] }
hkdf = "0.12"
aes-gcm = "0.10"
# зануление эфемерных ключей (DEK/KEK) после использования
zeroize = "1"
rand_core = { version = "0.6", features = ["std"] }
# QR-code SVG generation for device enrollment payload
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# RFC 6238 TOTP for admin 2FA. `totp-lite` is one file, no transitive deps
# beyond hmac/sha1 which we already pull in.
totp-lite = "2"
# base32 encoding for the TOTP secret (otpauth:// URI requires base32).
base32 = "0.5"
# base64url encoding for compact enrollment-QR payload (outpost-mdm://v1/<b64>).
base64 = "0.22"
# HTTP client for the APK watcher — polls R2 mirror manifest, parses release
# pointers, registers new APK versions in application_versions. rustls-tls
# чтобы избежать OpenSSL зависимости в musl/static builds.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = "z"          # optimize for size — 512 MB box
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
# Faster incremental builds during development
opt-level = 0
debug = 1
