[package]
name = "outpost-migrations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Outpost MDM — SQLite migrations (sqlx-migrate)"

[lib]
path = "src/lib.rs"
