[package]
name = "outpost-server"
version = "0.18.19"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Outpost MDM — axum HTTP server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "outpost-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["multipart"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
argon2.workspace = true
uuid.workspace = true
rand.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
hex.workspace = true
askama.workspace = true
qrcode.workspace = true
totp-lite.workspace = true
base32.workspace = true
base64.workspace = true
reqwest.workspace = true
p256.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
rand_core.workspace = true
outpost-core = { path = "../outpost-core" }
outpost-migrations = { path = "../outpost-migrations" }

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
http-body-util = "0.1"
tempfile = "3"
